--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       margin: 0 auto;
       padding: 20px;
     }
-    .add-form {
+    .add-form, .bulk-form {
       background: var(--card-bg);
       padding: 20px;
       border-radius: 12px;
@@ -62,6 +62,7 @@
       display: flex;
       gap: 12px;
       flex-wrap: wrap;
+      align-items: end;
     }
     .add-form input {
       flex: 1;
@@ -70,6 +71,37 @@
       border: 1px solid var(--border);
       border-radius: 6px;
       font-size: 16px;
+    }
+    .bulk-form {
+      flex-direction: column;
+      gap: 12px;
+      align-items: stretch;
+    }
+    .bulk-form input[type="file"] {
+      padding: 12px;
+      border: 1px solid var(--border);
+      border-radius: 6px;
+      background: white;
+    }
+    .bulk-form textarea {
+      flex: 1;
+      min-height: 100px;
+      padding: 12px;
+      border: 1px solid var(--border);
+      border-radius: 6px;
+      font-size: 14px;
+      resize: vertical;
+      font-family: monospace;
+    }
+    .bulk-preview {
+      background: #f0f0f0;
+      padding: 12px;
+      border-radius: 6px;
+      max-height: 200px;
+      overflow-y: auto;
+      font-size: 12px;
+      font-family: monospace;
+      white-space: pre-wrap;
     }
     .btn {
       background: var(--bbm-red);
@@ -90,6 +122,12 @@
     }
     .btn-danger:hover {
       background: #cc0000;
+    }
+    .btn-secondary {
+      background: #6b7280;
+    }
+    .btn-secondary:hover {
+      background: #4b5563;
     }
     .training-pair {
       background: var(--card-bg);
@@ -133,6 +171,31 @@
       margin: 20px 0;
       border-left: 4px solid #c33;
     }
+    .success {
+      background: #efe;
+      color: #080;
+      padding: 12px;
+      border-radius: 6px;
+      margin: 20px 0;
+      border-left: 4px solid #080;
+    }
+    .hidden {
+      display: none !important;
+    }
+    .progress-bar {
+      width: 100%;
+      height: 8px;
+      background: var(--border);
+      border-radius: 4px;
+      overflow: hidden;
+      margin: 10px 0;
+    }
+    .progress-fill {
+      height: 100%;
+      background: var(--bbm-red);
+      transition: width 0.3s ease;
+      width: 0%;
+    }
   </style>
 </head>
 <body>
@@ -146,11 +209,35 @@
     <div id="stats" class="stats hidden">Total pairs: <span id="pair-count">0</span></div>
 
     <div id="error-message" class="error hidden"></div>
+    <div id="success-message" class="success hidden"></div>
 
     <form id="add-form" class="add-form hidden">
       <input type="text" id="new-q" placeholder="Question (e.g., 'hello')" required>
       <input type="text" id="new-a" placeholder="Answer (e.g., 'Hi! What's up?')" required>
       <button type="submit" class="btn">Add Pair</button>
+    </form>
+
+    <form id="bulk-form" class="bulk-form hidden">
+      <div>
+        <label for="bulk-input" class="block text-sm font-medium text-gray-700 mb-2">Bulk Upload Options</label>
+        <div class="flex gap-4 mb-4">
+          <label class="flex items-center">
+            <input type="radio" name="bulk-mode" value="csv" checked class="mr-2">
+            CSV File (q,a per line)
+          </label>
+          <label class="flex items-center">
+            <input type="radio" name="bulk-mode" value="text" class="mr-2">
+            Text (q|a per line)
+          </label>
+        </div>
+      </div>
+      <input type="file" id="bulk-input" accept=".csv,.txt" placeholder="Upload CSV or TXT file">
+      <textarea id="bulk-text" placeholder="Or paste bulk data here (one pair per line: question|answer)" style="display: none;"></textarea>
+      <div id="bulk-preview" class="bulk-preview hidden">Preview will appear here...</div>
+      <div class="progress-bar hidden">
+        <div id="progress-fill" class="progress-fill"></div>
+      </div>
+      <button type="submit" class="btn" id="bulk-submit" disabled>Bulk Add Pairs</button>
     </form>
 
     <div id="loading" class="loading">Loading training data...</div>
@@ -184,9 +271,16 @@
       stats: document.getElementById('stats'),
       pairCount: document.getElementById('pair-count'),
       errorMessage: document.getElementById('error-message'),
+      successMessage: document.getElementById('success-message'),
       addForm: document.getElementById('add-form'),
       newQ: document.getElementById('new-q'),
       newA: document.getElementById('new-a'),
+      bulkForm: document.getElementById('bulk-form'),
+      bulkInput: document.getElementById('bulk-input'),
+      bulkText: document.getElementById('bulk-text'),
+      bulkPreview: document.getElementById('bulk-preview'),
+      bulkSubmit: document.getElementById('bulk-submit'),
+      progressFill: document.getElementById('progress-fill'),
       loading: document.getElementById('loading'),
       pairsList: document.getElementById('pairs-list'),
       retrainBtn: document.getElementById('retrain-btn')
@@ -199,10 +293,18 @@
     function showError(msg) {
       elements.errorMessage.textContent = msg;
       elements.errorMessage.classList.remove('hidden');
+      elements.successMessage.classList.add('hidden');
     }
 
-    function hideError() {
+    function showSuccess(msg) {
+      elements.successMessage.textContent = msg;
+      elements.successMessage.classList.remove('hidden');
       elements.errorMessage.classList.add('hidden');
+    }
+
+    function hideMessages() {
+      elements.errorMessage.classList.add('hidden');
+      elements.successMessage.classList.add('hidden');
     }
 
     function updateStats() {
@@ -233,22 +335,13 @@
 
     async function addPair(q, a) {
       if (!currentUser || !q.trim() || !a.trim()) {
-        showError('Please log in and enter both question and answer.');
-        return;
+        throw new Error('Please log in and enter both question and answer.');
       }
-      try {
-        hideError();
-        const trainingRef = ref(db, 'training_data');
-        const newPairRef = push(trainingRef);
-        const newPair = { q: q.trim().toLowerCase(), a: a.trim(), timestamp: Date.now() };
-        await set(newPairRef, newPair);
-        elements.newQ.value = '';
-        elements.newA.value = '';
-        console.log('Added training pair:', newPair);
-      } catch (error) {
-        showError('Failed to add pair: ' + error.message);
-        console.error('Add pair error:', error);
-      }
+      const trainingRef = ref(db, 'training_data');
+      const newPairRef = push(trainingRef);
+      const newPair = { q: q.trim().toLowerCase(), a: a.trim(), timestamp: Date.now() };
+      await set(newPairRef, newPair);
+      return newPair;
     }
 
     window.updatePair = async function(key) {
@@ -261,9 +354,10 @@
         return;
       }
       try {
-        hideError();
+        hideMessages();
         const pairRef = ref(db, `training_data/${key}`);
         await update(pairRef, { q: qInput, a: aInput, timestamp: Date.now() });
+        showSuccess('Pair updated successfully!');
         console.log('Updated pair:', { key, q: qInput, a: aInput });
       } catch (error) {
         showError('Failed to update pair: ' + error.message);
@@ -275,9 +369,10 @@
       if (!currentUser) return;
       if (!confirm('Delete this training pair?')) return;
       try {
-        hideError();
+        hideMessages();
         const pairRef = ref(db, `training_data/${key}`);
         await remove(pairRef);
+        showSuccess('Pair deleted successfully!');
         console.log('Deleted pair:', key);
       } catch (error) {
         showError('Failed to delete pair: ' + error.message);
@@ -287,7 +382,7 @@
 
     async function triggerRetrain() {
       // Since main app listens in real-time, just save any pending changes and notify
-      alert('Training data saved! Vynix will retrain automatically in connected apps.');
+      showSuccess('Training data saved! Vynix will retrain automatically in connected apps.');
       // Optionally, could add a Firebase flag to force retrain, but for now, rely on data change
     }
 
@@ -306,25 +401,151 @@
       });
     }
 
+    // Bulk functionality
+    function parseBulkData(content, mode) {
+      let lines;
+      if (mode === 'csv') {
+        // Simple CSV parser assuming first line is header, and comma-separated
+        lines = content.split('\n').slice(1).filter(line => line.trim());
+        return lines.map(line => {
+          const [q, a] = line.split(',').map(s => s.trim().replace(/"/g, ''));
+          return { q, a };
+        }).filter(pair => pair.q && pair.a);
+      } else {
+        // Text mode: q|a per line
+        lines = content.split('\n').filter(line => line.trim());
+        return lines.map(line => {
+          const [q, a] = line.split('|').map(s => s.trim());
+          return { q, a };
+        }).filter(pair => pair.q && pair.a);
+      }
+    }
+
+    function updateBulkPreview(pairs) {
+      if (pairs.length === 0) {
+        elements.bulkPreview.textContent = 'No valid pairs found.';
+        elements.bulkSubmit.disabled = true;
+      } else {
+        elements.bulkPreview.textContent = `${pairs.length} valid pairs parsed:\n\n${pairs.slice(0, 10).map(p => `${p.q} | ${p.a}`).join('\n')}${pairs.length > 10 ? '\n\n... (showing first 10)' : ''}`;
+        elements.bulkSubmit.disabled = false;
+      }
+      elements.bulkPreview.classList.remove('hidden');
+    }
+
+    async function handleBulkSubmit(e) {
+      e.preventDefault();
+      const mode = document.querySelector('input[name="bulk-mode"]:checked').value;
+      let content = '';
+
+      if (mode === 'text') {
+        content = elements.bulkText.value;
+      } else {
+        const file = elements.bulkInput.files[0];
+        if (!file) {
+          showError('Please select a file.');
+          return;
+        }
+        const text = await file.text();
+        content = text;
+      }
+
+      const pairs = parseBulkData(content, mode);
+      if (pairs.length === 0) {
+        showError('No valid pairs found in the input.');
+        return;
+      }
+
+      const progressBar = elements.progressFill.parentElement;
+      progressBar.classList.remove('hidden');
+      hideMessages();
+
+      let added = 0;
+      let errors = 0;
+      for (let i = 0; i < pairs.length; i++) {
+        try {
+          await addPair(pairs[i].q, pairs[i].a);
+          added++;
+        } catch (error) {
+          errors++;
+          console.error(`Failed to add pair ${i + 1}:`, error);
+        }
+        // Update progress
+        const progress = ((i + 1) / pairs.length) * 100;
+        elements.progressFill.style.width = `${progress}%`;
+      }
+
+      progressBar.classList.add('hidden');
+      elements.progressFill.style.width = '0%';
+
+      if (added > 0) {
+        showSuccess(`Bulk upload complete: ${added} pairs added, ${errors} errors.`);
+        if (mode === 'text') {
+          elements.bulkText.value = '';
+        } else {
+          elements.bulkInput.value = '';
+        }
+        elements.bulkPreview.classList.add('hidden');
+      } else {
+        showError('Bulk upload failed: No pairs added.');
+      }
+    }
+
+    // Event listeners
     elements.addForm.addEventListener('submit', (e) => {
       e.preventDefault();
       const q = elements.newQ.value;
       const a = elements.newA.value;
-      addPair(q, a);
+      addPair(q, a).then(() => {
+        elements.newQ.value = '';
+        elements.newA.value = '';
+        showSuccess('Pair added successfully!');
+      }).catch(error => {
+        showError(error.message);
+      });
     });
 
     elements.retrainBtn.addEventListener('click', triggerRetrain);
 
+    // Bulk form listeners
+    elements.bulkForm.addEventListener('submit', handleBulkSubmit);
+
+    const modeRadios = document.querySelectorAll('input[name="bulk-mode"]');
+    modeRadios.forEach(radio => {
+      radio.addEventListener('change', (e) => {
+        const isText = e.target.value === 'text';
+        elements.bulkInput.style.display = isText ? 'none' : 'block';
+        elements.bulkText.style.display = isText ? 'block' : 'none';
+        elements.bulkPreview.classList.add('hidden');
+        elements.bulkSubmit.disabled = true;
+      });
+    });
+
+    elements.bulkInput.addEventListener('change', async (e) => {
+      const file = e.target.files[0];
+      if (!file) return;
+      const content = await file.text();
+      const pairs = parseBulkData(content, 'csv');
+      updateBulkPreview(pairs);
+    });
+
+    elements.bulkText.addEventListener('input', (e) => {
+      const content = e.target.value;
+      const pairs = parseBulkData(content, 'text');
+      updateBulkPreview(pairs);
+    });
+
     onAuthStateChanged(auth, (user) => {
       currentUser = user;
       if (user) {
-        elements.authStatus.innerHTML = `Logged in as: ${user.displayName || user.email || 'User'} <button class="btn" onclick="signOutUser()" style="font-size: 12px; padding: 4px 8px;">Sign Out</button>`;
+        elements.authStatus.innerHTML = `Logged in as: ${user.displayName || user.email || 'User'} <button class="btn btn-secondary" onclick="signOutUser()" style="font-size: 12px; padding: 4px 8px; margin-left: 10px;">Sign Out</button>`;
         elements.addForm.classList.remove('hidden');
+        elements.bulkForm.classList.remove('hidden');
         elements.retrainBtn.classList.remove('hidden');
         loadTrainingData();
       } else {
         elements.authStatus.innerHTML = 'Not logged in. <button class="btn" onclick="signInAnonymously()">Sign In Anonymously</button>';
         elements.addForm.classList.add('hidden');
+        elements.bulkForm.classList.add('hidden');
         elements.retrainBtn.classList.add('hidden');
         elements.pairsList.innerHTML = '<p class="loading">Please sign in to manage training data.</p>';
         elements.loading.classList.add('hidden');
